Reconfigure/backend_sonar_cloud_issues